--- a/deviant.tex
+++ b/deviant.tex
@@ -56,7 +56,7 @@ The \textit{\sheriff} function is used to construct the set of all candidate con
 \begin{equation}
   \mathcal{Z}=\{M\in\mathcal{P}(\mathcal{C})\mid \forall t\in L^-~t\not\models M\cup P \text{ or } {\textit{\sheriff}}(t) = \emptyset \}
 \end{equation}
-according to a certain domain-independent \todo{ST: why domain-independent?}criterion. Due to the fact that not all the pairs of negative and positive set of traces can be perfectly separated by Declare~\cite{???}\todo{ST: reference to the paper}, there can be traces in $L^-$ for which the ${\textit{\sheriff}}$ is empty; we know that those cannot be excluded by any model that guarantees the acceptance of all the positive ones.
+according to a certain domain-independent \todo{ST: why domain-independent?}criterion. Due to the fact that not all the pairs of negative and positive set of traces can be perfectly separated by Declare~\cite{DBLP:conf/bpm/SlaatsDB21}, there can be traces in $L^-$ for which the ${\textit{\sheriff}}$ is empty; we know that those cannot be excluded by any model that guarantees the acceptance of all the positive ones.
 
 The second step uses an optimisation strategy to identify the solutions; in~\cite{deviant-tkde}, two different criteria were taken into account: \emph{generality} (or conversely, \emph{specificity}), and \emph{simplicity}.
 If the user is interested in the most general model, then \nd employs the closure operator $cl$ to select the models $S \in \mathcal{Z}$ with the less restricting consequences; that is, using the order $S\preceq S'$ defined by the subset of the closures $cl(S\cup P)\subseteq cl(S'\cup P)$.
