--- a/example.tex
+++ b/example.tex
@@ -19,7 +19,7 @@ Preferences over discovered models are then a way for supporting the user's need
 \subsection{Preferences over the process activities}
 \label{subsec:prefOverActivities}
 
-A first type of preference among discovered models is strictly related to the application domain. We can reasonably imagine that, depending on the user's goals, models that focus more on certain activities might be preferable w.r.t. other models.
+A first type of preference among discovered models is strictly related to the application domain. We can reasonably imagine that, depending on the user's goals, models that focus more on certain activities might be preferable.
 
 \begin{example}
 \label{ex:prefOverActivities}
