--- a/introduction.tex
+++ b/introduction.tex
@@ -8,7 +8,7 @@
 
 If we focus on the way process discovery techniques see the model-extraction task, we can divide them into two broad categories \cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}. The first category is constituted by works that tackle the problem of process discovery with one-class supervised learning techniques (see, e.g., \cite{2010-Aalst,2004-Aalst,2007-Gunther,2003-Weijters}). These works are driven by the assumption that all available log traces are instances of the process to be discovered. The second category comprises works that intend model-extraction as a two-class supervised task (\cite{2009-Chesani,2009-Goedertier,2006-Maruster}), which is driven by the possibility of partitioning the log traces into two sets according to some business or domain-related criterion. Usually these sets are referred to as \emph{positive} and \emph{negative} examples \cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}, and the goal is to learn a model that characterises one set w.r.t. the other. Hereafter, we refer to miners of the first and second category as \emph{unary} ands \emph{binary} miners, respectively. 
 
-Traditionally, the vast majority of works in the process discovery spectrum have followed the first approach. Nonetheless, few recent works \cite{deviant-tkde,2018-Ponce,DBLP:conf/bpm/SlaatsDB21} have highlighted the importance of addressing this challenge as a two-class supervised task with different motivations: first and foremost the actual existence of \emph{positive} and \emph{negative} examples in real use cases \cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}; second, the need to balance \emph{accuracy} and \emph{recall} \cite{DBLP:conf/bpm/SlaatsDB21}; and the need to discover the process of a particular variant according to a domain-specific need (e.g., the process characterizing ``fast'' traces) against the one that characterizes other variants, thus using the labels \emph{positive} and \emph{negative} to distinguish between two classes of examples \cite{deviant-arxiv}.  
+Traditionally, the vast majority of works in the process discovery spectrum have followed the first approach. Nonetheless, few recent works \cite{deviant-tkde,2018-Ponce,DBLP:conf/bpm/SlaatsDB21} have highlighted the importance of addressing this challenge as a two-class supervised task with different motivations: first and foremost the actual existence of \emph{positive} and \emph{negative} examples in real use cases \cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}; second, the need to balance \emph{accuracy} and \emph{recall} \cite{DBLP:conf/bpm/SlaatsDB21}; and the need to discover the process of a particular variant according to a domain-specific need (e.g., the process characterizing ``fast'' traces) against the one that characterizes other variants, thus using the labels \emph{positive} and \emph{negative} to distinguish between two classes of examples \cite{deviant-tkde}.  
 
 A problem that remains unsolved in process discovery in general and, in process discovery as a two-class supervised task in particular, is the need to select, among all possible discovered models, the ones that fit better the expectations of a user. This is somehow true for the traditional discovery of procedural and declarative models in a one-class supervised learning fashion, where the discovered model that accepts all the positive examples is usually too complex (e.g., too spaghetti like), and mechanisms are introduced to ``select'' different outputs. Examples of criteria for the selection can be the frequency of a certain behavior (e.g., an activity or a path), or the presence of certain modeling patterns (e.g., a specific Declare pattern).   
 The problem becomes even more compelling when we approach process discovery as a two-class supervised task. In fact, as recently shown in \cite{DBLP:conf/bpm/SlaatsDB21}, perfect binary miners, able to discover models that accept all positive examples and none of the negative examples, do not necessarily exist. In such cases, many sub-optimal models can be returned, leading to the issue of deciding a criteria for preferring one model to another.
