--- a/conclusions.tex
+++ b/conclusions.tex
@@ -5,10 +5,5 @@
 \label{sec:conclusions}
 
 In this paper, we address the problem of inserting user preferences in the discovery of declarative process models as a two-class supervised task. In particular we extend the \nd binary miner for the \declare modeling language with preferences over \declare patterns and activities appearing in the model (plus a combination of the two). 
-The computation of preferred models, which take onto account the constraints posed by the user is performed using \asprin, a general framework for computing optimal answer sets of logic programs with preferences. The provided approach is described by means of motivating examples and an application to the real-life event logs DREYERS and CERV. 
+The computation of preferred models, which take onto account the constraints posed by the user is performed using \asprin, a general framework for computing optimal answer sets of logic programs with preferences. The provided approach is described by means of motivating examples and an application to the real-life event logs DREYERS and CERV how to describe - in a discriminative manner - execution traces on the bases of preferred (e.g., important, ...) activities and Declare patterns. Future works will include through evaluations, which also aim to include end users. This will enable the assessment of the potential benefits of involving users, trough their preferences, in the loop of process discovery.
 
-\todo{CG:Cosa mettiamo come findings e future works?} 
-
-
-
-\btext{@all, Chiara G}
